[package]
name = "blob-unpin"
version = "0.1.0"
authors = ["Taylor Thomas <taylor.thomas@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = { git = "https://github.com/Azure/azure-sdk-for-rust", version = "0.1"}
azure_storage = { git = "https://github.com/Azure/azure-sdk-for-rust", version = "0.1"}
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
